<resources>
    <string name="app_name">FamilyMapClient</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="logout_button">Logout</string>

    <string name="prompt_server_host">Server Host</string>
    <string name="prompt_server_port">Server Port</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_gender">Gender</string>

    <string name="title_server_host">Server Host:</string>
    <string name="title_server_port">Server Port:</string>
    <string name="title_username">Username:</string>
    <string name="title_email">Email:</string>
    <string name="title_password">Password:</string>
    <string name="title_firstName">First Name:</string>
    <string name="title_lastName">Last Name:</string>
    <string name="title_gender">Gender:</string>

    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>

    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>

    <string name="event_info_title">Life Events</string>
    <string name="family_info_title">Family</string>

    <string name="event_info_window_default_name">Click on an marker</string>
    <string name="event_info_window_default_info">to see event details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="search_button">Search</string>

    <!-- Strings related to Settings -->

    <string name="life_story_lines_descripter">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines_descripter">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines_descripter">SHOW SPOUSE LINES</string>
    <string name="map_type_descripter">BACKGROUND DISPLAY ON MAP</string>
    <string name="resync_descripter">FROM FAMILYMAP SERVICE</string>
    <string name="logout_descripter">RETURNS TO LOGIN SCREEN</string>

    <string name="life_story_lines_title">Life Story Lines</string>
    <string name="family_tree_lines_title">Family Tree Lines</string>
    <string name="spouse_lines_title">Spouse Lines</string>
    <string name="map_type_title">Map Type</string>
    <string name="resync_title">Re-sync Data</string>
    <string name="logout_title">Logout</string>

    <string-array name="line_colors">
        <item>green</item>
        <item>blue</item>
        <item>red</item>
    </string-array>

    <string-array name="map_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string name="on_button">On</string>
    <string name="off_button">Off</string>

    <!-- Filter Strings -->
    <string name="father_side_title">Father\'s Side</string>
    <string name="mother_side_title">Mother\'s Side</string>
    <string name="father_side_descriptor">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_side_descriptor">FILTER BY MOTHER\'S SIDE OF FAMILY</string>

    <string name="male_events_title">Male Events</string>
    <string name="female_events_title">Female Events</string>
    <string name="gender_events_descriptor">FILTER EVENTS BASED ON GENDER</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
